--- a/FleetTrackingInformationSystem/FleetTrackingInformationSystem/Properties/Settings.settings
+++ b/FleetTrackingInformationSystem/FleetTrackingInformationSystem/Properties/Settings.settings
@@ -10,5 +10,13 @@
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
       <Value Profile="(Default)">Data Source=VCDNSTDST04PC25\VARSITYCOLLEGE;Initial Catalog=FleetTrackingDatabase;Integrated Security=True</Value>
     </Setting>
+    <Setting Name="FleetTrackingDBConnectionString" Type="(Connection string)" Scope="Application">
+      <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
+&lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
+  &lt;ConnectionString&gt;Data Source=myserver17.database.windows.net;Initial Catalog=FleetTrackingDB;Persist Security Info=True;User ID=kimmy-17&lt;/ConnectionString&gt;
+  &lt;ProviderName&gt;System.Data.SqlClient&lt;/ProviderName&gt;
+&lt;/SerializableConnectionString&gt;</DesignTimeValue>
+      <Value Profile="(Default)">Data Source=myserver17.database.windows.net;Initial Catalog=FleetTrackingDB;Persist Security Info=True;User ID=kimmy-17</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
