--- a/FleetTrackingInformationSystem/FleetTrackingInformationSystem/FleetTrackingInformationSystem.csproj
+++ b/FleetTrackingInformationSystem/FleetTrackingInformationSystem/FleetTrackingInformationSystem.csproj
@@ -91,6 +91,12 @@
     <Compile Include="frmReports.Designer.cs">
       <DependentUpon>frmReports.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmSearch.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmSearch.Designer.cs">
+      <DependentUpon>frmSearch.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmService.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -134,6 +140,12 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>ReportVieweer.xsd</DependentUpon>
     </Compile>
+    <Compile Include="Search1.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Search1.Designer.cs">
+      <DependentUpon>Search1.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="frmEmployee.resx">
       <DependentUpon>frmEmployee.cs</DependentUpon>
     </EmbeddedResource>
@@ -151,6 +163,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmReports.resx">
       <DependentUpon>frmReports.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmSearch.resx">
+      <DependentUpon>frmSearch.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmService.resx">
       <DependentUpon>frmService.cs</DependentUpon>
@@ -177,6 +192,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
     <EmbeddedResource Include="Report1.rdlc" />
+    <EmbeddedResource Include="Search1.resx">
+      <DependentUpon>Search1.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="FleetTrackingDBDataSet.xsc">
       <DependentUpon>FleetTrackingDBDataSet.xsd</DependentUpon>
     </None>
