--- a/FleetTrackingInformationSystem/FleetTrackingInformationSystem/FleetTrackingInformationSystem.csproj
+++ b/FleetTrackingInformationSystem/FleetTrackingInformationSystem/FleetTrackingInformationSystem.csproj
@@ -32,6 +32,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="MessagingToolkit.QRCode">
+      <HintPath>..\packages\MessagingToolkit.QRCode.1.3.0\lib\MessagingToolkit.QRCode.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.ReportViewer.Common, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91" />
     <Reference Include="Microsoft.ReportViewer.WinForms, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91" />
     <Reference Include="System" />
@@ -50,6 +53,12 @@
     <Compile Include="Check.cs" />
     <Compile Include="DBConnect.cs" />
     <Compile Include="Employee.cs" />
+    <Compile Include="frmCompletedTripDetails.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmCompletedTripDetails.Designer.cs">
+      <DependentUpon>frmCompletedTripDetails.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmEmployee.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -111,11 +120,11 @@
     <Compile Include="frmSplashScreen.Designer.cs">
       <DependentUpon>frmSplashScreen.cs</DependentUpon>
     </Compile>
-    <Compile Include="frmTripUsage.cs">
+    <Compile Include="frmTripPlan.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="frmTripUsage.Designer.cs">
-      <DependentUpon>frmTripUsage.cs</DependentUpon>
+    <Compile Include="frmTripPlan.Designer.cs">
+      <DependentUpon>frmTripPlan.cs</DependentUpon>
     </Compile>
     <Compile Include="frmLocation.cs">
       <SubType>Form</SubType>
@@ -131,6 +140,9 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Register.cs" />
+    <EmbeddedResource Include="frmCompletedTripDetails.resx">
+      <DependentUpon>frmCompletedTripDetails.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmEmployee.resx">
       <DependentUpon>frmEmployee.cs</DependentUpon>
     </EmbeddedResource>
@@ -158,8 +170,8 @@
     <EmbeddedResource Include="frmTimesheet.resx">
       <DependentUpon>frmTimesheet.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="frmTripUsage.resx">
-      <DependentUpon>frmTripUsage.cs</DependentUpon>
+    <EmbeddedResource Include="frmTripPlan.resx">
+      <DependentUpon>frmTripPlan.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmLocation.resx">
       <DependentUpon>frmLocation.cs</DependentUpon>
@@ -176,6 +188,7 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
