--- a/FleetTrackingInformationSystem/FleetTrackingInformationSystem/FleetTrackingInformationSystem.csproj
+++ b/FleetTrackingInformationSystem/FleetTrackingInformationSystem/FleetTrackingInformationSystem.csproj
@@ -145,6 +145,7 @@
     <Compile Include="frmVehicles.Designer.cs">
       <DependentUpon>frmVehicles.cs</DependentUpon>
     </Compile>
+    <Compile Include="GeneratePassword.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Register.cs" />
     <EmbeddedResource Include="frmCompletedTripDetails.resx">
